# csv-cli-tool

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: calls.csv  claims.csv  events.csv  logs.csv  metrics.csv  products.csv  products_large.csv
src/: main.py
src/agent/: core.py  modes.py  prompts.py  tools.py
src/cli/: commands.py  renderer.py  repl.py
src/config/: settings.py
src/indexer/: __init__.py
src/memory/: session_store.py
src/tools/: csv_tool.py
